--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="nav-header">
         <div class="nav-title">
           <div class="header-left">
-              <img class="logo" src="images/softwareseni_logo.svg">
+              <img class="logo" src="softwareseni_logo.svg">
             </div>
         </div>
       </div>
